--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+ :root{
+  --ButtonLight : rgb(16, 182, 233);
+  --BorderLightGrey: rgb(118, 118, 118);
+  --OutseekPrimaryDark: rgb(21,27,36);
+  --OutseekSecondaryDark: rgb(27,34,45);
+
+}
